--- a/tests/folia.example
+++ b/tests/folia.example
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<FoLiA xmlns="http://ilk.uvt.nl/folia" xmlns:xlink="http://www.w3.org/1999/xlink" xml:id="WR-P-E-J-0000000001" version="0.7" generator="libfolia-v0.4">
+<FoLiA xmlns="http://ilk.uvt.nl/folia" xmlns:xlink="http://www.w3.org/1999/xlink" xml:id="WR-P-E-J-0000000001" version="0.8" generator="libfolia-v0.4">
   <metadata type="imdi">
     <annotations>
       <token-annotation annotator="ilktok" annotatortype="auto" />
@@ -9,6 +9,9 @@
       <errordetection-annotation set="corrections" annotator="proycon" annotatortype="manual" />
       <sense-annotation set="sense-set" />
       <event-annotation set="event-set" />
+      <entity-annotation set="mwu-set" />
+      <syntax-annotation set="syntax-set" />
+      <dependency-annotation set="alpino-set" />
     </annotations>
     <imdi:METATRANSCRIPT xmlns:imdi="http://www.mpi.nl/IMDI/Schema/IMDI" Date="2009-01-27" Type="SESSION" Version="1">
     <imdi:Session>
@@ -171,35 +174,91 @@
               <pos class="LET()"/>
               <lemma class="."/>
             </w>
+	    <entities>
+	      <entity class="ander_woord">
+		<wref id="WR-P-E-J-0000000001.p.1.s.1.w.4" t="ander" />
+		<wref id="WR-P-E-J-0000000001.p.1.s.1.w.5" t="woord" />
+	      </entity>
+            </entities>
             <syntax>
-                <su class="sentence">
-                 <su class="subject"><wref id="WR-P-E-J-0000000001.p.1.s.1.w.1" t="Stemma" /></su>
-                 <su class="verb"><wref id="WR-P-E-J-0000000001.p.1.s.1.w.2" t="is" /></su>
-                 <su class="predicate">
-                    <su class="np">
-                        <wref id="WR-P-E-J-0000000001.p.1.s.1.w.3" t="een" />
-                        <wref id="WR-P-E-J-0000000001.p.1.s.1.w.4" t="ander" />
-                        <wref id="WR-P-E-J-0000000001.p.1.s.1.w.5" t="woord" />
-                    </su>
-                    <su class="pp">
-                        <wref id="WR-P-E-J-0000000001.p.1.s.1.w.6" t="voor" />
-                        <wref id="WR-P-E-J-0000000001.p.1.s.1.w.7" t="stamboom" />
-                    </su>
-                 </su>
-                 <wref id="WR-P-E-J-0000000001.p.1.s.1.w.8" t="." />
-                </su>
+	      <su class="sentence">
+		<su class="subject"><wref id="WR-P-E-J-0000000001.p.1.s.1.w.1" t="Stemma" /></su>
+		<su class="verb"><wref id="WR-P-E-J-0000000001.p.1.s.1.w.2" t="is" /></su>
+		<su class="predicate">
+		  <su class="np">
+		    <wref id="WR-P-E-J-0000000001.p.1.s.1.w.3" t="een" />
+		    <wref id="WR-P-E-J-0000000001.p.1.s.1.w.4" t="ander" />
+		    <wref id="WR-P-E-J-0000000001.p.1.s.1.w.5" t="woord" />
+		  </su>
+		  <su class="pp">
+		    <wref id="WR-P-E-J-0000000001.p.1.s.1.w.6" t="voor" />
+		    <wref id="WR-P-E-J-0000000001.p.1.s.1.w.7" t="stamboom" />
+		  </su>
+		</su>
+		<wref id="WR-P-E-J-0000000001.p.1.s.1.w.8" t="." />
+	      </su>
             </syntax>
+	    <dependencies>
+	      <dependency xml:id="WR-P-E-J-0000000001.p.1.s.1.dep.1" class="su">
+		<hd>
+		  <wref id="WR-P-E-J-0000000001.p.1.s.1.w.2" t="is" />
+		</hd>
+		<dep>
+		  <wref id="WR-P-E-J-0000000001.p.1.s.1.w.1" t="Stemma" />
+		</dep>
+	      </dependency>
+	      <dependency xml:id="WR-P-E-J-0000000001.p.1.s.1.dep.2" class="predc">
+		<hd>
+		  <wref id="WR-P-E-J-0000000001.p.1.s.1.w.2" t="is" />
+		</hd>
+		<dep>
+		  <wref id="WR-P-E-J-0000000001.p.1.s.1.w.5" t="woord" />
+		</dep>
+	      </dependency>
+	      <dependency xml:id="WR-P-E-J-0000000001.p.1.s.1.dep.3" class="det">
+		<hd>
+		  <wref id="WR-P-E-J-0000000001.p.1.s.1.w.5" t="woord" />
+		</hd>
+		<dep>
+		  <wref id="WR-P-E-J-0000000001.p.1.s.1.w.3" t="een" />
+		</dep>
+	      </dependency>
+	      <dependency xml:id="WR-P-E-J-0000000001.p.1.s.1.dep.4" class="mod">
+		<hd>
+		  <wref id="WR-P-E-J-0000000001.p.1.s.1.w.5" t="woord" />
+		</hd>
+		<dep>
+		  <wref id="WR-P-E-J-0000000001.p.1.s.1.w.4" t="ander" />
+		</dep>
+	      </dependency>
+	      <dependency xml:id="WR-P-E-J-0000000001.p.1.s.1.dep.5" class="mod">
+		<hd>
+		  <wref id="WR-P-E-J-0000000001.p.1.s.1.w.5" t="woord" />
+		</hd>
+		<dep>
+		  <wref id="WR-P-E-J-0000000001.p.1.s.1.w.6" t="voor" />
+		</dep>
+	      </dependency>
+	      <dependency xml:id="WR-P-E-J-0000000001.p.1.s.1.dep.6" class="obj1">
+		<hd>
+		  <wref id="WR-P-E-J-0000000001.p.1.s.1.w.6" t="voor" />
+		</hd>
+		<dep>
+		  <wref id="WR-P-E-J-0000000001.p.1.s.1.w.7" t="stamboom" />
+		</dep>
+	      </dependency>
+	    </dependencies> 
             <chunking>
-                <chunk>
-                        <wref id="WR-P-E-J-0000000001.p.1.s.1.w.3" t="een" />
-                        <wref id="WR-P-E-J-0000000001.p.1.s.1.w.4" t="ander" />
-                        <wref id="WR-P-E-J-0000000001.p.1.s.1.w.5" t="woord" />                
-                </chunk>
-                <chunk>
-                        <wref id="WR-P-E-J-0000000001.p.1.s.1.w.6" t="voor" />
-                        <wref id="WR-P-E-J-0000000001.p.1.s.1.w.7" t="stamboom" />
-                </chunk>
-            </chunking>            
+	      <chunk>
+		<wref id="WR-P-E-J-0000000001.p.1.s.1.w.3" t="een" />
+		<wref id="WR-P-E-J-0000000001.p.1.s.1.w.4" t="ander" />
+		<wref id="WR-P-E-J-0000000001.p.1.s.1.w.5" t="woord" />
+	      </chunk>
+	      <chunk>
+		<wref id="WR-P-E-J-0000000001.p.1.s.1.w.6" t="voor" />
+		<wref id="WR-P-E-J-0000000001.p.1.s.1.w.7" t="stamboom" />
+	      </chunk>
+            </chunking>
           </s>
           <s xml:id="WR-P-E-J-0000000001.p.1.s.2">
             <w xml:id="WR-P-E-J-0000000001.p.1.s.2.w.1">
@@ -972,43 +1031,45 @@
         </p>
       </div>
       <div xml:id="sandbox">
-          <list  xml:id="sandbox.list.1">
-              <listitem xml:id="sandbox.list.1.listitem.1" n="1">
-                  <s xml:id="sandbox.list.1.listitem.1.s.1">
-                      <w xml:id="sandbox.list.1.listitem.1.s.1.w.1">
-                          <t>Eerste</t>
-			  <sense class="some.sense.id" synset="some.synset.id" />
-                      </w>
-                      <w xml:id="sandbox.list.1.listitem.1.s.1.w.2">
-                          <t>testitem</t>
-                      </w>                      
-                  </s>                  
-              </listitem>
-              <event class="applause" actor="audience" />
-              <listitem xml:id="sandbox.list.1.listitem.2" n="2">
-                  <s xml:id="sandbox.list.1.listitem.2.s.1">
-                      <w xml:id="sandbox.list.1.listitem.2.s.1.w.1">
-                          <t>Tweede</t>
-                      </w>
-                      <w xml:id="sandbox.list.1.listitem.2.s.1.w.2">
-                          <t>testitem</t>
-                      </w>                      
-                  </s>                  
-              </listitem>
-          </list>
-          <figure xml:id="sandbox.figure.1" src="http://upload.wikimedia.org/wikipedia/commons/8/8e/Family_tree.svg">
-              <desc>Stamboom plaatje van wikipedia</desc>              
-              <caption>
-                  <s xml:id="sandbox.figure.1.caption.s.1">
-                      <w xml:id="sandbox.figure.1.caption.s.1.w.1">
-                          <t>Een</t>
-                      </w>
-                      <w xml:id="sandbox.figure.1.caption.s.1.w.2">
-                          <t>stamboom</t>
-                      </w>                      
-                  </s>
-              </caption>
-          </figure>
+	<list  xml:id="sandbox.list.1">
+	  <listitem xml:id="sandbox.list.1.listitem.1" n="1">
+	    <s xml:id="sandbox.list.1.listitem.1.s.1">
+	      <w xml:id="sandbox.list.1.listitem.1.s.1.w.1">
+		<t>Eerste</t>
+		<sense class="some.sense.id" synset="some.synset.id" />
+	      </w>
+	      <w xml:id="sandbox.list.1.listitem.1.s.1.w.2">
+		<t>testitem</t>
+	      </w>                      
+	    </s>                  
+	  </listitem>
+	  <event class="applause" actor="audience" />
+	  <listitem xml:id="sandbox.list.1.listitem.2" n="2">
+	    <s xml:id="sandbox.list.1.listitem.2.s.1">
+	      <w xml:id="sandbox.list.1.listitem.2.s.1.w.1">
+		<t>Tweede</t>
+	      </w>
+	      <w xml:id="sandbox.list.1.listitem.2.s.1.w.2">
+		<t>testitem</t>
+	      </w>                      
+	    </s>                  
+	  </listitem>
+	</list>
+	<event xml:id="sandbox.event.1" class="presentation" actor="proycon" begindatetime="2011-12-15T19:01" enddatetime="2011-12-15T19:05"> 
+	  <figure xml:id="sandbox.figure.1" src="http://upload.wikimedia.org/wikipedia/commons/8/8e/Family_tree.svg">
+	    <desc>Stamboom plaatje van wikipedia</desc>              
+	    <caption>
+	      <s xml:id="sandbox.figure.1.caption.s.1">
+		<w xml:id="sandbox.figure.1.caption.s.1.w.1">
+		  <t>Een</t>
+		</w>
+		<w xml:id="sandbox.figure.1.caption.s.1.w.2">
+		  <t>stamboom</t>
+		</w>                      
+	      </s>
+	    </caption>
+	  </figure>
+	</event>
       </div>
       <gap xml:id="WR-P-E-J-0000000001.gap.1" class="backmatter" annotator="proycon">
        <desc>Backmatter</desc>
