modified test030 to test stricttext() a bit better
git-svn-id: https://ilk.uvt.nl/svn/tests/foliatest/trunk@13604 12f355fe-0486-481a-ad91-c297ab22b4e3

--- a/tests/folia.example
+++ b/tests/folia.example
@@ -691,6 +691,7 @@
             </w>
           </s>
           <s xml:id="WR-P-E-J-0000000001.p.1.s.6">
+            <t class="original">Verdwenen handschriften waarvan men toch vermoedt dat ze ooit bestaan hebben worden ook in het stemma opgenomen en worden weergegeven door de laatste letters van het alfabet en worden tussen vierkant haken geplaatst .</t>
             <w xml:id="WR-P-E-J-0000000001.p.1.s.6.w.1">
               <t>Verdwenen</t>
               <pos class="WW(vd,prenom,zonder)">
