added an example of a head attribute to the testfile
git-svn-id: https://ilk.uvt.nl/svn/tests/foliatest/trunk@13677 12f355fe-0486-481a-ad91-c297ab22b4e3

--- a/tests/folia.example
+++ b/tests/folia.example
@@ -701,7 +701,7 @@
             </w>
             <w xml:id="WR-P-E-J-0000000001.p.1.s.6.w.2">
               <t>handschriften</t>
-              <pos class="N(soort,mv,basis)"/>
+              <pos head="N" class="N(soort,mv,basis)"/>
               <lemma class="handschrift"/>
             </w>
             <w xml:id="WR-P-E-J-0000000001.p.1.s.6.w.3">
