--- a/tests/folia.example
+++ b/tests/folia.example
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <FoLiA xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://ilk.uvt.nl/folia" xml:id="WR-P-E-J-0000000001" generator="libfolia-v0.7" version="0.8">
-  <metadata type="imdi"><annotations><token-annotation annotator="ilktok" annotatortype="auto"/><pos-annotation annotator="tadpole" annotatortype="auto" set="cgn-combinedtags"/><lemma-annotation annotator="tadpole" annotatortype="auto" set="lemmas-nl"/><correction-annotation annotator="proycon" annotatortype="manual" set="corrections"/><errordetection-annotation annotator="proycon" annotatortype="manual" set="corrections"/><sense-annotation set="sense-set"/><event-annotation set="event-set"/><entity-annotation set="mwu-set"/><syntax-annotation set="syntax-set"/><dependency-annotation set="alpino-set"/></annotations><imdi:METATRANSCRIPT xmlns:imdi="http://www.mpi.nl/IMDI/Schema/IMDI" Date="2009-01-27" Type="SESSION" Version="1">
+  <metadata type="imdi"><annotations><token-annotation set="ucto" annotator="ilktok" annotatortype="auto"/><pos-annotation annotator="tadpole" annotatortype="auto" set="cgn-combinedtags"/><lemma-annotation annotator="tadpole" annotatortype="auto" set="lemmas-nl"/><correction-annotation annotator="proycon" annotatortype="manual" set="corrections"/><errordetection-annotation annotator="proycon" annotatortype="manual" set="corrections"/><sense-annotation set="sense-set"/><div-annotation set="div-set"/><event-annotation set="event-set"/><entity-annotation set="mwu-set"/><syntax-annotation set="syntax-set"/><dependency-annotation set="alpino-set"/><gap-annotation set="gap-set"/></annotations><imdi:METATRANSCRIPT xmlns:imdi="http://www.mpi.nl/IMDI/Schema/IMDI" Date="2009-01-27" Type="SESSION" Version="1">
     <imdi:Session>
       <imdi:Name>WR-P-E-J-0000000001</imdi:Name>
       <imdi:Title>Stemma</imdi:Title>
@@ -108,7 +108,7 @@
   </imdi:METATRANSCRIPT>
   </metadata>
   <text xml:id="WR-P-E-J-0000000001.text">
-    <div xml:id="WR-P-E-J-0000000001.div0.1">
+    <div xml:id="WR-P-E-J-0000000001.div0.1" class="chapter">
       <head xml:id="WR-P-E-J-0000000001.head.1">
         <s xml:id="WR-P-E-J-0000000001.head.1.s.1">
           <w xml:id="WR-P-E-J-0000000001.head.1.s.1.w.1">
@@ -1022,7 +1022,7 @@
         </s>
       </p>
     </div>
-    <div xml:id="sandbox">
+    <div xml:id="sandbox" class="unknown">
       <list xml:id="sandbox.list.1">
         <listitem xml:id="sandbox.list.1.listitem.1" n="1">
           <s xml:id="sandbox.list.1.listitem.1.s.1">
