adapted examples to better parsing
git-svn-id: https://ilk.uvt.nl/svn/tests/foliatest/trunk@14668 12f355fe-0486-481a-ad91-c297ab22b4e3

--- a/tests/folia.example
+++ b/tests/folia.example
@@ -1,111 +1,129 @@
 <?xml version="1.0"?>
 <FoLiA xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://ilk.uvt.nl/folia" xml:id="WR-P-E-J-0000000001" generator="libfolia-v0.10" version="0.8">
-  <metadata type="imdi"><annotations><token-annotation annotator="ilktok" annotatortype="auto" set="ucto"/><div-annotation set="div-set"/><paragraph-annotation annotator="ucto" annotatortype="auto" set="paragraphs"/><sentence-annotation annotator="ucto" annotatortype="auto" set="sentences"/><pos-annotation annotator="tadpole" annotatortype="auto" set="cgn-combinedtags"/><lemma-annotation annotator="tadpole" annotatortype="auto" set="lemmas-nl"/><sense-annotation set="sense-set"/><syntax-annotation set="syntax-set"/><entity-annotation set="ent-set"/><correction-annotation annotator="proycon" annotatortype="manual" set="corrections"/><errordetection-annotation set="error-set"/><morphological-annotation set="morph-set"/><event-annotation set="event-set"/><dependency-annotation set="alpino-set"/><gap-annotation set="gap-set"/></annotations><imdi:METATRANSCRIPT xmlns:imdi="http://www.mpi.nl/IMDI/Schema/IMDI" Date="2009-01-27" Type="SESSION" Version="1">
-    <imdi:Session>
-      <imdi:Name>WR-P-E-J-0000000001</imdi:Name>
-      <imdi:Title>Stemma</imdi:Title>
-      <imdi:Date>2009-01-27</imdi:Date>
-      <imdi:Description/>
-      <imdi:MDGroup>
-        <imdi:Location>
-          <imdi:Continent>Europe</imdi:Continent>
-          <imdi:Country>NL/B</imdi:Country>
-        </imdi:Location>
-        <imdi:Keys/>
-        <imdi:Project>
-          <imdi:Name>D-Coi</imdi:Name>
-          <imdi:Title/>
-          <imdi:Id/>
-          <imdi:Contact/>
-          <imdi:Description/>
-        </imdi:Project>
-        <imdi:Collector>
-          <imdi:Name/>
-          <imdi:Contact/>
-          <imdi:Description/>
-        </imdi:Collector>
-        <imdi:Content>
-          <imdi:Task/>
-          <imdi:Modalities/>
-          <imdi:CommunicationContext>
-            <imdi:Interactivity/>
-            <imdi:PlanningType/>
-            <imdi:Involvement/>
-          </imdi:CommunicationContext>
-          <imdi:Genre>
-            <imdi:Interactional/>
-            <imdi:Discursive/>
-            <imdi:Performance/>
-          </imdi:Genre>
-          <imdi:Languages>
-            <imdi:Language>
-              <imdi:Id/>
-              <imdi:Name>Dutch</imdi:Name>
-              <imdi:Description/>
-            </imdi:Language>
-          </imdi:Languages>
-          <imdi:Keys/>
-        </imdi:Content>
-        <imdi:Participants/>
-      </imdi:MDGroup>
-      <imdi:Resources>
-        <imdi:MediaFile>
-          <imdi:ResourceLink/>
-          <imdi:Size>2865</imdi:Size>
-          <imdi:Type/>
-          <imdi:Format/>
-          <imdi:Quality>Unknown</imdi:Quality>
-          <imdi:RecordingConditions/>
-          <imdi:TimePosition Start="Unknown"/>
-          <imdi:Access>
-            <imdi:Availability/>
-            <imdi:Date/>
-            <imdi:Owner/>
-            <imdi:Publisher/>
-            <imdi:Contact/>
-            <imdi:Description/>
-          </imdi:Access>
-          <imdi:Description/>
-        </imdi:MediaFile>
-        <imdi:AnnotationUnit>
-          <imdi:ResourceLink/>
-          <imdi:MediaResourceLink/>
-          <imdi:Annotator/>
-          <imdi:Date/>
-          <imdi:Type/>
-          <imdi:Format/>
-          <imdi:ContentEncoding/>
-          <imdi:CharacterEncoding/>
-          <imdi:Access>
-            <imdi:Availability/>
-            <imdi:Date/>
-            <imdi:Owner/>
-            <imdi:Publisher/>
-            <imdi:Contact/>
-            <imdi:Description/>
-          </imdi:Access>
-          <imdi:LanguageId/>
-          <imdi:Anonymous>false</imdi:Anonymous>
-          <imdi:Description/>
-        </imdi:AnnotationUnit>
-        <imdi:Source>
-          <imdi:Id/>
-          <imdi:Format/>
-          <imdi:Quality>Unknown</imdi:Quality>
-          <imdi:TimePosition Start="Unknown"/>
-          <imdi:Access>
-            <imdi:Availability>GNU Free Documentation License</imdi:Availability>
-            <imdi:Date/>
-            <imdi:Owner/>
-            <imdi:Publisher>Wikimedia Foundation (NL/B)</imdi:Publisher>
-            <imdi:Contact/>
-            <imdi:Description/>
-          </imdi:Access>
-          <imdi:Description/>
-        </imdi:Source>
-      </imdi:Resources>
-    </imdi:Session>
-  </imdi:METATRANSCRIPT>
+  <metadata type="imdi">
+    <annotations>
+      <token-annotation annotator="ilktok" annotatortype="auto" set="ucto"/>
+      <div-annotation set="div-set"/>
+      <paragraph-annotation annotator="ucto" annotatortype="auto" set="paragraphs"/>
+      <sentence-annotation annotator="ucto" annotatortype="auto" set="sentences"/>
+      <pos-annotation annotator="tadpole" annotatortype="auto" set="cgn-combinedtags"/>
+      <lemma-annotation annotator="tadpole" annotatortype="auto" set="lemmas-nl"/>
+      <sense-annotation set="sense-set"/>
+      <syntax-annotation set="syntax-set"/>
+      <entity-annotation set="ent-set"/>
+      <correction-annotation annotator="proycon" annotatortype="manual" set="corrections"/>
+      <errordetection-annotation set="error-set"/>
+      <morphological-annotation set="morph-set"/>
+      <event-annotation set="event-set"/>
+      <dependency-annotation set="alpino-set"/>
+      <gap-annotation set="gap-set"/>
+    </annotations>
+    <imdi:METATRANSCRIPT xmlns:imdi="http://www.mpi.nl/IMDI/Schema/IMDI" Date="2009-01-27" Type="SESSION" Version="1">
+      <imdi:Session>
+	<imdi:Name>WR-P-E-J-0000000001</imdi:Name>
+	<imdi:Title>Stemma</imdi:Title>
+	<imdi:Date>2009-01-27</imdi:Date>
+	<imdi:Description/>
+	<imdi:MDGroup>
+	  <imdi:Location>
+	    <imdi:Continent>Europe</imdi:Continent>
+            <imdi:Country>NL/B</imdi:Country>
+          </imdi:Location>
+	  <imdi:Keys/>
+	  <imdi:Project>
+	    <imdi:Name>D-Coi</imdi:Name>
+	    <imdi:Title/>
+	    <imdi:Id/>
+	    <imdi:Contact/>
+	    <imdi:Description/>
+	  </imdi:Project>
+	  <imdi:Collector>
+	    <imdi:Name/>
+	    <imdi:Contact/>
+	    <imdi:Description/>
+	  </imdi:Collector>
+	  <imdi:Content>
+	    <imdi:Task/>
+	    <imdi:Modalities/>
+	    <imdi:CommunicationContext>
+	      <imdi:Interactivity/>
+	      <imdi:PlanningType/>
+	      <imdi:Involvement/>
+	    </imdi:CommunicationContext>
+	    <imdi:Genre>
+	      <imdi:Interactional/>
+	      <imdi:Discursive/>
+	      <imdi:Performance/>
+	    </imdi:Genre>
+	    <imdi:Languages>
+	      <imdi:Language>
+		<imdi:Id/>
+		<imdi:Name>Dutch</imdi:Name>
+		<imdi:Description/>
+	      </imdi:Language>
+	    </imdi:Languages>
+	    <imdi:Keys/>
+	  </imdi:Content>
+	  <imdi:Participants/>
+	</imdi:MDGroup>
+	<imdi:Resources>
+	  <imdi:MediaFile>
+	    <imdi:ResourceLink/>
+	    <imdi:Size>2865</imdi:Size>
+	    <imdi:Type/>
+	    <imdi:Format/>
+	    <imdi:Quality>Unknown</imdi:Quality>
+	    <imdi:RecordingConditions/>
+	    <imdi:TimePosition Start="Unknown"/>
+	    <imdi:Access>
+	      <imdi:Availability/>
+	      <imdi:Date/>
+	      <imdi:Owner/>
+	      <imdi:Publisher/>
+	      <imdi:Contact/>
+	      <imdi:Description/>
+	    </imdi:Access>
+	    <imdi:Description/>
+	  </imdi:MediaFile>
+	  <imdi:AnnotationUnit>
+	    <imdi:ResourceLink/>
+	    <imdi:MediaResourceLink/>
+	    <imdi:Annotator/>
+	    <imdi:Date/>
+	    <imdi:Type/>
+	    <imdi:Format/>
+	    <imdi:ContentEncoding/>
+	    <imdi:CharacterEncoding/>
+	    <imdi:Access>
+	      <imdi:Availability/>
+	      <imdi:Date/>
+	      <imdi:Owner/>
+	      <imdi:Publisher/>
+	      <imdi:Contact/>
+	      <imdi:Description/>
+	    </imdi:Access>
+	    <imdi:LanguageId/>
+	    <imdi:Anonymous>false</imdi:Anonymous>
+	    <imdi:Description/>
+	  </imdi:AnnotationUnit>
+	  <imdi:Source>
+	    <imdi:Id/>
+	    <imdi:Format/>
+	    <imdi:Quality>Unknown</imdi:Quality>
+	    <imdi:TimePosition Start="Unknown"/>
+	    <imdi:Access>
+	      <imdi:Availability>GNU Free Documentation License</imdi:Availability>
+	      <imdi:Date/>
+	      <imdi:Owner/>
+	      <imdi:Publisher>Wikimedia Foundation (NL/B)</imdi:Publisher>
+	      <imdi:Contact/>
+	      <imdi:Description/>
+	    </imdi:Access>
+	    <imdi:Description/>
+	  </imdi:Source>
+	</imdi:Resources>
+      </imdi:Session>
+    </imdi:METATRANSCRIPT>
   </metadata>
   <text xml:id="WR-P-E-J-0000000001.text">
     <div xml:id="WR-P-E-J-0000000001.div0.1" class="chapter">
@@ -1066,9 +1084,9 @@
     <gap xml:id="WR-P-E-J-0000000001.gap.1" annotator="proycon" class="backmatter">
       <desc>Backmatter</desc>
       <content><![CDATA[
-De tekst is beschikbaar onder de licentie Creative Commons Naamsvermelding/Gelijk delen, er kunnen aanvullende voorwaarden van toepassing zijn. Zie de Gebruiksvoorwaarden voor meer informatie.
-Wikipedia® is een geregistreerd handelsmerk van de Wikimedia Foundation, Inc., een organisatie zonder winstoogmerk.
-]]></content>
+      De tekst is beschikbaar onder de licentie Creative Commons Naamsvermelding/Gelijk delen, er kunnen aanvullende voorwaarden van toepassing zijn. Zie de Gebruiksvoorwaarden voor meer informatie.
+      Wikipedia® is een geregistreerd handelsmerk van de Wikimedia Foundation, Inc., een organisatie zonder winstoogmerk.
+      ]]></content>
     </gap>
   </text>
 </FoLiA>
