--- a/tests/folia.example
+++ b/tests/folia.example
@@ -136,7 +136,7 @@
           </w>
         </s>
       </head>
-      <p xml:id="WR-P-E-J-0000000001.p.1">
+      <p xml:id="WR-P-E-J-0000000001.p.1" class="firstparagraph">
         <s xml:id="WR-P-E-J-0000000001.p.1.s.1">
           <w xml:id="WR-P-E-J-0000000001.p.1.s.1.w.1">
             <t>Stemma</t>
@@ -699,7 +699,7 @@
             <lemma class="."/>
           </w>
         </s>
-        <s xml:id="WR-P-E-J-0000000001.p.1.s.6">
+        <s xml:id="WR-P-E-J-0000000001.p.1.s.6" class="sentence">
           <t class="original">Verdwenen handschriften waarvan men toch vermoedt dat ze ooit bestaan hebben worden ook in het stemma opgenomen en worden weergegeven door de laatste letters van het alfabet en worden tussen vierkant haken geplaatst .</t>
           <w xml:id="WR-P-E-J-0000000001.p.1.s.6.w.1">
             <t>Verdwenen</t>
