--- a/tests/folia.example
+++ b/tests/folia.example
@@ -1,4 +1,5 @@
 <?xml version="1.0"?>
+<?xml-stylesheet type="text/xsl" href="folia2html.xsl"?>
 <FoLiA xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://ilk.uvt.nl/folia" xml:id="WR-P-E-J-0000000001" generator="libfolia-v0.10" version="0.8">
   <metadata type="imdi">
     <annotations>
@@ -1098,7 +1099,7 @@
         </figure>
       </event>
     </div>
-    <gap xml:id="WR-P-E-J-0000000001.gap.1" annotator="proycon" class="backmatter">
+    <gap xml:id="WR-P-E-J-0000000001.gap.1" class="backmatter">
       <desc>Backmatter</desc>
       <content><![CDATA[
       De tekst is beschikbaar onder de licentie Creative Commons Naamsvermelding/Gelijk delen, er kunnen aanvullende voorwaarden van toepassing zijn. Zie de Gebruiksvoorwaarden voor meer informatie.
