--- a/tests/folia.example
+++ b/tests/folia.example
@@ -4,7 +4,6 @@
   <metadata type="imdi">
     <annotations>
       <token-annotation annotator="ilktok" annotatortype="auto" set="ucto"/>
-      <div-annotation set="div-set"/>
       <paragraph-annotation annotator="ucto" annotatortype="auto" set="paragraphs"/>
       <sentence-annotation annotator="ucto" annotatortype="auto" set="sentences"/>
       <pos-annotation annotator="tadpole" annotatortype="auto" set="cgn-combinedtags"/>
@@ -132,7 +131,7 @@
     </imdi:METATRANSCRIPT>
   </metadata>
   <text xml:id="WR-P-E-J-0000000001.text">
-    <div xml:id="WR-P-E-J-0000000001.div0.1" class="chapter">
+    <div xml:id="WR-P-E-J-0000000001.div0.1">
       <head xml:id="WR-P-E-J-0000000001.head.1">
         <s xml:id="WR-P-E-J-0000000001.head.1.s.1">
           <w xml:id="WR-P-E-J-0000000001.head.1.s.1.w.1">
