added an Alignment with href example
git-svn-id: https://ilk.uvt.nl/svn/tests/foliatest/trunk@15748 12f355fe-0486-481a-ad91-c297ab22b4e3

--- a/tests/folia.example
+++ b/tests/folia.example
@@ -536,6 +536,9 @@
             <t>afstammingsgeschiedenis</t>
             <pos class="N(soort,ev,basis,zijd,stan)"/>
             <lemma class="afstammingsgeschiedenis"/>
+            <alignment class="extern" xlink:href="externalfile.xml" xlink:type="simple">
+              <aref id="A1" type="w"/>
+            </alignment>
           </w>
           <w xml:id="WR-P-E-J-0000000001.p.1.s.3.w.18">
             <t>geplaatst</t>
