added tests for xml:lang attribute
git-svn-id: https://ilk.uvt.nl/svn/tests/foliatest/trunk@15785 12f355fe-0486-481a-ad91-c297ab22b4e3

--- a/tests/folia.example
+++ b/tests/folia.example
@@ -564,6 +564,7 @@
         <s xml:id="WR-P-E-J-0000000001.p.1.s.4">
           <t>De hoofdletter A wordt gebruikt voor het originele handschrift.</t>
           <t class="original">De hoofdletter A wordt gebruikt voor het originele handschrift.</t>
+          <t class="translate" xml:lang="en">Uppercase A is used for the original.</t>
           <w xml:id="WR-P-E-J-0000000001.p.1.s.4.w.1">
             <t offset="0">De</t>
             <t class="original" offset="0">De</t>
