small change. Ignore XML comment
git-svn-id: https://ilk.uvt.nl/svn/tests/foliatest/trunk@16242 12f355fe-0486-481a-ad91-c297ab22b4e3

--- a/tests/folia.example
+++ b/tests/folia.example
@@ -1184,6 +1184,7 @@
       </div>
       <div xml:id="sandbox.3">
 	<head xml:id="sandbox.3.head">
+	  <!-- Not tokenised! -->
 	  <t>De FoLiA developers zijn:</t>
 	  <str xml:id="sandbox.3.str">
 	    <t xml:lang="en" offset="3">FoLiA developers</t>
