--- a/tests/folia.example
+++ b/tests/folia.example
@@ -4,6 +4,7 @@
   <metadata type="native">
     <annotations>
       <token-annotation annotator="ilktok" annotatortype="auto" set="ucto"/>
+      <division-annotation set="divs"/>
       <paragraph-annotation annotator="ucto" annotatortype="auto" set="paragraphs"/>
       <sentence-annotation annotator="ucto" annotatortype="auto" set="sentences"/>
       <pos-annotation annotator="tadpole" annotatortype="auto" set="cgn-combinedtags"/>
@@ -30,7 +31,7 @@
   </metadata>
   <text xml:id="WR-P-E-J-0000000001.text">
     <lang class="nl"/>
-    <div xml:id="WR-P-E-J-0000000001.div0.1">
+    <div xml:id="WR-P-E-J-0000000001.div0.1" class="chapter">
       <head xml:id="WR-P-E-J-0000000001.head.1">
         <s xml:id="WR-P-E-J-0000000001.head.1.s.1">
           <w xml:id="WR-P-E-J-0000000001.head.1.s.1.w.1">
