--- a/tests/folia.example
+++ b/tests/folia.example
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-stylesheet type="text/xsl" href="folia2html.xsl"?>
-<FoLiA xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://ilk.uvt.nl/folia" xml:id="WR-P-E-J-0000000001" generator="libfolia-v0.11" version="0.8">
+<FoLiA xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://ilk.uvt.nl/folia" xml:id="WR-P-E-J-0000000001" generator="libfolia-v0.11" version="0.10.0">
   <metadata type="native">
     <annotations>
       <token-annotation annotator="ilktok" annotatortype="auto" set="ucto"/>
@@ -25,6 +25,7 @@
       <metric-annotation set="metric-set"/>
       <table-annotation set="table-set"/>
       <lang-annotation set="ISO639"/>
+      <style-annotation set="styles"/>
     </annotations>
     <meta id="title">Stemma</meta>
     <meta id="language">nl</meta>
@@ -601,9 +602,9 @@
             <lemma class="oorsprong"/>
           </w>
           <w xml:id="WR-P-E-J-0000000001.p.1.s.5.w.17">
-            <t>of</t>
+            <t>óf</t>
             <pos class="VG(neven)"/>
-            <lemma class="of"/>
+            <lemma class="óf"/>
           </w>
           <w xml:id="WR-P-E-J-0000000001.p.1.s.5.w.18">
             <t>plaats</t>
@@ -627,7 +628,7 @@
           </w>
         </s>
         <s xml:id="WR-P-E-J-0000000001.p.1.s.6" class="sentence">
-          <t class="original">Verdwenen handschriften waarvan men toch vermoedt dat ze ooit bestaan hebben worden ook in het stemma opgenomen en worden weergegeven door de laatste letters van het alfabet en worden tussen vierkant haken geplaatst .</t>
+          <t class="original">Verdwenen handschriften waarvan men toch vermoedt dat ze ooit bestaan hebben worden ook in het stemma opgenomen en worden weergegeven door de laatste letters van het alfabet en worden tussen <t-correction id="WR-P-E-J-0000000001.p.1.s.6.w.31.c.1" class="spelling" original="vierkant">vierkante</t-correction> haken geplaatst.<br/></t>
           <w xml:id="WR-P-E-J-0000000001.p.1.s.6.w.1">
             <t>Verdwenen</t>
             <pos class="WW(vd,prenom,zonder)">
@@ -1086,10 +1087,10 @@
       <div xml:id="sandbox.3">
 	<head xml:id="sandbox.3.head">
 	  <!-- Not tokenised! -->
-	  <t>De FoLiA developers zijn:</t>
+	  <t>De <t-str id="sandbox.3.str"><t-style xml:id="sandbox.3.str.bold" class="bold">FoLiA</t-style> developers</t-str> zijn:</t>
 	  <str xml:id="sandbox.3.str">
 	    <t offset="3">FoLiA developers</t>
-	    <lang class="en"/>
+	    <lang class="eng"/>
 	    <metric class="wordcount" value="2"/>
 	  </str>
 	</head>
