--- a/tests/folia.example
+++ b/tests/folia.example
@@ -11,6 +11,7 @@
       <lemma-annotation annotator="tadpole" annotatortype="auto" set="lemmas-nl"/>
       <sense-annotation set="sense-set"/>
       <syntax-annotation set="syntax-set"/>
+      <entity-annotation set="http://raw.github.com/proycon/folia/master/setdefinitions/namedentities.foliaset.xml" />
       <entity-annotation set="mwu-set"/>
       <correction-annotation annotator="proycon" annotatortype="manual" set="corrections"/>
       <errordetection-annotation set="error-set"/>
@@ -91,7 +92,7 @@
             <lemma class="."/>
           </w>
           <entities>
-            <entity class="ander_woord">
+            <entity class="ander_woord" set="mwu-set">
               <wref id="WR-P-E-J-0000000001.p.1.s.1.w.4" t="ander"/>
 	      <!-- no idea why you would like to comment on this -->
               <wref id="WR-P-E-J-0000000001.p.1.s.1.w.5" t="woord"/>
@@ -313,16 +314,27 @@
             <pos class="VZ(init)"/>
             <lemma class="tussen"/>
           </w>
-          <w xml:id="WR-P-E-J-0000000001.p.1.s.2.w.24">
-            <t>handschrift</t>
-            <pos class="N(soort,ev,basis,onz,stan)"/>
-            <lemma class="handschrift"/>
-          </w>
-          <w xml:id="WR-P-E-J-0000000001.p.1.s.2.w.25">
-            <t>en</t>
-            <pos class="VG(neven)"/>
-            <lemma class="en"/>
-          </w>
+	  <correction xml:id="correction.join" class="join">
+	    <new>
+              <w xml:id="WR-P-E-J-0000000001.p.1.s.2.w.24-25">
+		<t>handschriften</t>
+		<pos class="N(soort,mv,basis,onz,stan)"/>
+		<lemma class="handschrift"/>
+	      </w>
+	    </new>
+            <original auth="no">
+              <w xml:id="WR-P-E-J-0000000001.p.1.s.2.w.24">
+		<t>handschrift</t>
+		<pos class="N(soort,ev,basis,onz,stan)"/>
+		<lemma class="handschrift"/>
+              </w>
+              <w xml:id="WR-P-E-J-0000000001.p.1.s.2.w.25">
+		<t>en</t>
+		<pos class="VG(neven)"/>
+		<lemma class="en"/>
+              </w>
+	    </original>
+	  </correction>
           <w xml:id="WR-P-E-J-0000000001.p.1.s.2.w.26">
             <t>weer</t>
             <pos class="BW()"/>
@@ -1081,7 +1093,7 @@
 	    <t offset="37">.</t>
 	  </w>
 	  <entities>
-	    <entity class="politicalparty">
+	    <entity class="politicalparty" set="mwu-set">
              <wref id="WR-P-E-J-0000000001.sandbox.2.s.1.w.1.m.1" t="CDA"/>
 	    </entity>
 	  </entities>
@@ -1123,6 +1135,13 @@
 	      <w xml:id="example.table.1.w.5">
 		<t>Gompel</t>
 	      </w>
+              <entities>
+                <entity class="per" set="http://raw.github.com/proycon/folia/master/setdefinitions/namedentities.foliaset.xml">
+                  <wref id="example.table.1.w.3" t="Maarten" />
+                  <wref id="example.table.1.w.4" t="van" />
+                  <wref id="example.table.1.w.5" t="Gompel" />
+		</entity>
+	      </entities>
 	    </cell>
 	    <cell>
 	      <w xml:id="example.table.1.w.6">
@@ -1134,6 +1153,13 @@
 	      <w xml:id="example.table.1.w.8">
 		<t>Nijmegen</t>
 	      </w>
+              <entities>
+                <entity class="org" set="http://raw.github.com/proycon/folia/master/setdefinitions/namedentities.foliaset.xml">
+                  <wref id="example.table.1.w.6" t="Radboud" />
+                  <wref id="example.table.1.w.7" t="University" />
+                  <wref id="example.table.1.w.8" t="Nijmegen" />
+                </entity>
+              </entities>
 	    </cell>
 	  </row>
 	  <row>
@@ -1150,6 +1176,14 @@
 	      <w xml:id="example.table.1.w.12">
 		<t>Sloot</t>
 	      </w>
+              <entities>
+                <entity class="per" set="http://raw.github.com/proycon/folia/master/setdefinitions/namedentities.foliaset.xml">
+                  <wref id="example.table.1.w.9" t="Ko" />
+                  <wref id="example.table.1.w.10" t="van" />
+                  <wref id="example.table.1.w.11" t="der" />
+                  <wref id="example.table.1.w.12" t="Sloot" />
+                </entity>
+              </entities>
 	    </cell>
 	    <cell>
 	      <w xml:id="example.table.1.w.13">
@@ -1158,6 +1192,12 @@
 	      <w xml:id="example.table.1.w.14">
 		<t>University</t>
 	      </w>
+              <entities>
+                <entity set="http://raw.github.com/proycon/folia/master/setdefinitions/namedentities.foliaset.xml" class="org">
+                  <wref id="example.table.1.w.13" t="Tilburg" />
+                  <wref id="example.table.1.w.14" t="University" />
+                </entity>
+              </entities>
 	    </cell>
 	  </row>
 	</table>
